--- a/view/clientes.html
+++ b/view/clientes.html
@@ -1,5 +1,5 @@
 <div ng-controller="ClienteCtrl as ctrl">
-    <div>
+    <div id="navPage">
         <ul class="nav nav-pills nav-justified" id="pills-tab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link" style="border-radius: 0px;" data-toggle="pill"
@@ -51,15 +51,16 @@
             <nav aria-label="...">
                 <ul class="pagination">
                     <li ng-class="{ 'disabled': ctrl.paginationFirst}" class="page-item">
-                        <button type="button" ng-disabled="ctrl.paginationFirst" ng-click="ctrl.viewPageNavigationAnterior()"
-                            class="page-link">Anterior</button>
+                        <button type="button" ng-disabled="ctrl.paginationFirst"
+                            ng-click="ctrl.viewPageNavigationAnterior()" class="page-link">Anterior</button>
                     </li>
-                    <li ng-repeat="viewPage in ctrl.pagination" ng-class="{'active':ctrl.page == viewPage}" class="page-item">
+                    <li ng-repeat="viewPage in ctrl.pagination" ng-class="{'active':ctrl.page == viewPage}"
+                        class="page-item">
                         <a class="page-link" ng-click="ctrl.viewPageNavigation(viewPage)">{{viewPage}}</a>
                     </li>
                     <li ng-class="{ 'disabled': ctrl.paginationLast}" class="page-item">
-                        <button type="button" ng-disabled="ctrl.paginationLast" ng-click="ctrl.viewPageNavigationProxima()"
-                            class="page-link">Próxima</button>
+                        <button type="button" ng-disabled="ctrl.paginationLast"
+                            ng-click="ctrl.viewPageNavigationProxima()" class="page-link">Próxima</button>
                     </li>
                 </ul>
             </nav>
@@ -69,13 +70,14 @@
     <div class="jumbotron" id="buscarCliente" ng-show="ctrl.viewSelecionado == 'buscarCliente'">
         <h4>Buscar Cliente</h4>
         <form name="clienteFormBuscar">
-            <input class="form-control" type="text" ng-model="cpfBuscarCliente" name="cpfBuscarCliente" placeholder="CPF do Cliente"
-                ng-pattern="/^\d{11}$/" required="true" />
+            <input class="form-control" type="text" ng-model="buscarCliente.cpf" name="cpfBuscarCliente"
+                placeholder="CPF do Cliente" ng-pattern="/^\d{11}$/" required="true" />
         </form>
-        <button style="margin-bottom: 15px;" class="btn btn-primary btn-block" ng-click="ctrl.buscarCliente(cpfBuscarCliente)"
-            ng-disabled="clienteFormBuscar.$invalid">Buscar
+        <button style="margin-bottom: 15px;" class="btn btn-primary btn-block"
+            ng-click="ctrl.buscarCliente(buscarCliente)" ng-disabled="clienteFormBuscar.$invalid">Buscar
             Cliente</button>
-        <div ng-show="clienteFormBuscar.cpfBuscarCliente.$invalid && clienteFormBuscar.cpfBuscarCliente.$dirty" class="alert alert-danger">
+        <div ng-show="clienteFormBuscar.cpfBuscarCliente.$invalid && clienteFormBuscar.cpfBuscarCliente.$dirty"
+            class="alert alert-danger">
             CPF Inválido
         </div>
         <table class="table" ng-show="ctrl.showClienteEncontrado">
@@ -103,14 +105,16 @@
     <div class="jumbotron" id="cadastrarCliente" ng-show="ctrl.viewSelecionado == 'cadastrarCliente'">
         <h4>Cadastrar Cliente</h4>
         <form name="clienteFormCadastrar">
-            <input class="form-control" type="text" ng-model="cliente.nome" name="nome" placeholder="Nome do Cliente"
-                ng-pattern="/^[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$/" ng-required="true">
-            <input class="form-control" type="text" ng-model="cliente.cpf" name="cpf" placeholder="CPF do Cliente"
-                ng-pattern="/^\d{11}$/" ng-required="true" />
+            <input class="form-control" type="text" ng-model="cadastrarCliente.nome" name="nome"
+                placeholder="Nome do Cliente" ng-pattern="/^[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$/"
+                ng-required="true">
+            <input class="form-control" type="text" ng-model="cadastrarCliente.cpf" name="cpf"
+                placeholder="CPF do Cliente" ng-pattern="/^\d{11}$/" ng-required="true" />
         </form>
 
         <button style="margin-bottom: 15px;" id="buttonCadastrar" class="btn btn-primary btn-block"
-            ng-click="ctrl.cadastrarCliente(cliente)" ng-disabled="clienteFormCadastrar.$invalid">Cadastrar Cliente</button>
+            ng-click="ctrl.cadastrarCliente(cadastrarCliente)" ng-disabled="clienteFormCadastrar.$invalid">Cadastrar
+            Cliente</button>
 
         <div ng-show="clienteFormCadastrar.nome.$invalid && clienteFormCadastrar.nome.$dirty"
             class="alert alert-danger">
@@ -145,13 +149,15 @@
     <div class="jumbotron" id="clienteAtualizarNome" ng-show="ctrl.viewSelecionado == 'clienteAtualizarNome'">
         <h4>Atualizar Nome do Cliente</h4>
         <form name="clienteFormAtualizarNome">
-            <input class="form-control" type="text" ng-model="cpf" name="cpf" placeholder="CPF do Cliente"
-                ng-pattern="/^\d{11}$/" required="true" />
-            <input class="form-control" type="text" ng-model="nome" name="nome" placeholder="Novo Nome do Cliente"
-                ng-pattern="/^[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$/" ng-required="true">
+            <input class="form-control" type="text" ng-model="clienteAtualizarNome.cpf" name="cpf"
+                placeholder="CPF do Cliente" ng-pattern="/^\d{11}$/" required="true" />
+            <input class="form-control" type="text" ng-model="clienteAtualizarNome.nome" name="nome"
+                placeholder="Novo Nome do Cliente" ng-pattern="/^[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$/"
+                ng-required="true">
         </form>
         <button style="margin-bottom: 15px;" class="btn btn-primary btn-block"
-            ng-click="ctrl.clienteAtualizarNome(cpf, nome)" ng-disabled="clienteFormAtualizarNome.$invalid">Atualizar
+            ng-click="ctrl.clienteAtualizarNome(clienteAtualizarNome)"
+            ng-disabled="clienteFormAtualizarNome.$invalid">Atualizar
             Nome</button>
         <div ng-show="clienteFormAtualizarNome.cpf.$invalid && clienteFormAtualizarNome.cpf.$dirty"
             class="alert alert-danger">
