--- a/view/header-laboratory.html
+++ b/view/header-laboratory.html
@@ -3,13 +3,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About</h4>
+          <h4 class="text-white">Sobre</h4>
           <p class="text-muted">
-            The best of the world!
+            Gerenciamento de agendamento de laboratórios.
           </p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
+          <h4 class="text-white">UniCesumar</h4>
           <ul class="list-unstyled">
             <li>
               <a href="https://www.instagram.com/kevenluan2016/?hl=pt-br" class="text-white"
@@ -23,19 +23,19 @@
         <nav aria-label="Page navigation example">
           <ul class="pagination">
             <li class="page-item">
-              <a class="page-link" ng-href="#!/">Home</a>
+              <a class="page-link" ng-href="#!/schedules">Agendas</a>
             </li>
             <li class="page-item">
-              <a class="page-link" ng-href="#!/clientes">Clientes</a>
+              <a class="page-link" ng-href="#!/to-schedule">Realizar/Cancelar Agenda</a>
             </li>
             <li class="page-item">
-              <a class="page-link" ng-href="#!/produtos">Produtos</a>
+              <a class="page-link" ng-href="#!/laboratory">Laboratórios</a>
             </li>
             <li class="page-item">
-              <a class="page-link" ng-href="#!/ingredientes">Ingredientes</a>
+              <a class="page-link" ng-href="#!/register">Registros</a>
             </li>
             <li class="page-item">
-              <a class="page-link" ng-href="#!/venda">Venda</a>
+              <a class="page-link" ng-href="#!/auto-generator">Gerador Automatico de Agenda Semestral</a>
             </li>
           </ul>
         </nav>
@@ -51,7 +51,7 @@
           viewbox="0 0 24 24" focusable="false">
           <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
           <circle cx="12" cy="13" r="4" /></svg>
-        <strong>Lanchonete</strong>
+        <strong>Laboratórios</strong>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
         aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
