--- a/view/register.html
+++ b/view/register.html
@@ -3,7 +3,7 @@
         <ul class="nav nav-pills nav-justified" id="pills-tab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link" style="border-radius: 0px;" data-toggle="pill"
-                    ng-click="ctrl.selectView('registerSemester'">Semestre</a>
+                    ng-click="ctrl.selectView('registerSemester')">Semestre</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" style="border-radius: 0px;" data-toggle="pill"
